<!--
  ~ Software Name : OCast SDK
  ~
  ~  Copyright (C) 2017 Orange
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Sample OCast application</string>
    <string name="media_route_menu_title">MediaRoute</string>
    <string name="webapp_desc">WebApp tests</string>
    <string name="webapp_id">Orange-DefaultReceiver-DEV</string>
    <string name="btn_start">Start</string>
    <string name="btn_join">Join</string>
    <string name="btn_stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="mute_on">Muted</string>
    <string name="mute_off">Unmuted</string>
</resources>
